updated build to newer version, no intermediate build dir.

--- a/src/core-websocket.html
+++ b/src/core-websocket.html
@@ -4,5 +4,5 @@
     <content></content>
   </div>
 </template>
-<script src="./core-websocket.js"></script>
+<script src="./core-websocket.litcoffee"></script>
 </polymer-element>
