--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>core-websocket</title>
+    <script src="http://localhost:35729/livereload.js"></script>
     <script src="node_modules/polymer/platform.js"></script>
     <link rel="import" href="node_modules/polymer/polymer.html">
     <link rel="import" href="build/core-websocket.html">
